separate css file

--- a/index.html
+++ b/index.html
@@ -3,50 +3,7 @@
 
 <head>
     <title>BLE</title>
-    <style>
-        body {
-            padding: 20px;
-            background-color: #f4f4f4;
-        }
-
-        #center {
-            width: 100%;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: white;
-            border-radius: 8px;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 28px 0;
-            font-size: 18px;
-            text-align: left;
-        }
-
-        th,
-        td {
-            padding: 12px;
-            text-align: left;
-            border: 1px solid #222;
-        }
-
-        th {
-            background-color: #f2f2f2;
-        }
-
-        tr:hover {
-            background-color: #f9f9f9;
-        }
-
-        .time-ago {
-            color: gray;
-            font-style: italic;
-        }
-    </style>
-
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <script>
         // Helper function to calculate time ago
         function timeAgo(dateTime) {
@@ -127,7 +84,7 @@
 </head>
 
 <body>
-    <div id="center"></div>
+    <div id="center" class="TNT_main"></div>
 </body>
 
 </html>
