--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                     }
                                 },
                                 "sort": {
-                                    "sortBy": "dateTime",
+                                    "sortBy": "version",
                                     "sortDirection": "desc",
                                     "offset": offset,
                                     "lastId": lastId
