--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
                                 "id": "DiagnosticBluetoothBeaconInRangeId"
                             }
                         },
+                        "sort": {
+                            "sortBy": "date",
+                            "sortDirection": "desc",
+                        },
                         "resultsLimit": 500,
                     }, function (result) {
                         console.log("result : ", result);
